--- a/SimpsonsQuotes/Base.lproj/Main.storyboard
+++ b/SimpsonsQuotes/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zjO-aQ-R5U">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RMb-BM-ac1">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -19,7 +19,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="The Simpsons" translatesAutoresizingMaskIntoConstraints="NO" id="TP7-62-ied">
-                                <rect key="frame" x="67.5" y="35" width="240" height="128"/>
+                                <rect key="frame" x="67.5" y="79" width="240" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="VkS-m7-RiV"/>
                                     <constraint firstAttribute="width" constant="240" id="eWh-zI-mAw"/>
@@ -32,7 +32,7 @@
                                     <constraint firstAttribute="height" constant="50" id="Syf-y3-WC2"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="20"/>
-                                <state key="normal" title="NEW QUOTE">
+                                <state key="normal" title="START🤘">
                                     <color key="titleColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
                                 </state>
@@ -41,7 +41,7 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="s3R-Tt-7xY">
-                                <rect key="frame" x="20" y="193" width="335" height="68"/>
+                                <rect key="frame" x="20" y="237" width="335" height="68"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quote" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UXA-yX-Kjb">
                                         <rect key="frame" x="137.5" y="0.0" width="60.5" height="25.5"/>
@@ -61,14 +61,41 @@
                                 </constraints>
                             </stackView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qy7-0n-rgl">
-                                <rect key="frame" x="20" y="311" width="335" height="246"/>
+                                <rect key="frame" x="20" y="355" width="335" height="202"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qhm-I4-Bqy">
+                                <rect key="frame" x="300" y="585" width="55" height="55"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="55" id="cxa-hK-weX"/>
+                                    <constraint firstAttribute="width" constant="55" id="hUK-xc-7W3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="📋"/>
+                                <connections>
+                                    <segue destination="zMY-dc-hEp" kind="show" id="Yzf-dk-9Yu"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MQz-7m-mRq">
+                                <rect key="frame" x="20" y="585" width="55" height="55"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="55" id="S3d-9D-Rxb"/>
+                                    <constraint firstAttribute="height" constant="55" id="VSk-aY-HWc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="🎺"/>
+                                <connections>
+                                    <action selector="playMusic" destination="zjO-aQ-R5U" eventType="touchUpInside" id="IXs-yS-3Nm"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="Qn3-xy-3Lw" firstAttribute="top" secondItem="qy7-0n-rgl" secondAttribute="bottom" constant="30" id="9Uw-We-noj"/>
                             <constraint firstItem="TP7-62-ied" firstAttribute="centerX" secondItem="5d7-2O-Q8m" secondAttribute="centerX" id="Bb5-I6-UEU"/>
+                            <constraint firstItem="MQz-7m-mRq" firstAttribute="leading" secondItem="Ko3-q6-gsj" secondAttribute="leading" constant="20" id="DRT-pb-sjO"/>
+                            <constraint firstItem="Ko3-q6-gsj" firstAttribute="trailing" secondItem="Qhm-I4-Bqy" secondAttribute="trailing" constant="20" id="GDV-uJ-u5T"/>
                             <constraint firstItem="bJ6-3u-Mee" firstAttribute="leading" secondItem="5d7-2O-Q8m" secondAttribute="leading" id="Ils-sC-5B1"/>
+                            <constraint firstItem="Ko3-q6-gsj" firstAttribute="bottom" secondItem="MQz-7m-mRq" secondAttribute="bottom" constant="27" id="KiL-pV-fWd"/>
                             <constraint firstItem="Ko3-q6-gsj" firstAttribute="bottom" secondItem="Qn3-xy-3Lw" secondAttribute="bottom" constant="30" id="Kkw-DR-r9D"/>
                             <constraint firstItem="Ko3-q6-gsj" firstAttribute="trailing" secondItem="qy7-0n-rgl" secondAttribute="trailing" constant="20" id="Kqr-UN-Adt"/>
                             <constraint firstItem="qy7-0n-rgl" firstAttribute="leading" secondItem="Ko3-q6-gsj" secondAttribute="leading" constant="20" id="LvQ-gX-Q9L"/>
@@ -82,9 +109,11 @@
                             <constraint firstItem="Ko3-q6-gsj" firstAttribute="trailing" secondItem="s3R-Tt-7xY" secondAttribute="trailing" constant="20" id="nST-eI-Bm0"/>
                             <constraint firstItem="s3R-Tt-7xY" firstAttribute="top" secondItem="TP7-62-ied" secondAttribute="bottom" constant="30" id="oa4-mF-Hi2"/>
                             <constraint firstAttribute="bottom" secondItem="bJ6-3u-Mee" secondAttribute="bottom" id="u5b-eO-xdE"/>
+                            <constraint firstItem="Ko3-q6-gsj" firstAttribute="bottom" secondItem="Qhm-I4-Bqy" secondAttribute="bottom" constant="27" id="w2Y-KY-5uL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Ko3-q6-gsj"/>
                     </view>
+                    <navigationItem key="navigationItem" id="au2-i5-nNJ"/>
                     <connections>
                         <outlet property="characterPicture" destination="qy7-0n-rgl" id="enQ-t4-Wq2"/>
                         <outlet property="nameLabel" destination="U8U-b7-1KM" id="Y2i-f5-hSm"/>
@@ -95,7 +124,75 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qHT-G4-Krt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4" y="87.706146926536732"/>
+            <point key="canvasLocation" x="1874.4000000000001" y="87.706146926536732"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="lod-7E-Feu">
+            <objects>
+                <tableViewController id="zMY-dc-hEp" customClass="ListOfQuotesTable" customModule="SimpsonsQuotes" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="7Qg-vI-XKB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="2t2-UP-YX9" detailTextLabel="i8z-fw-0px" style="IBUITableViewCellStyleSubtitle" id="nwx-Pt-OXe">
+                                <rect key="frame" x="0.0" y="28" width="375" height="62.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nwx-Pt-OXe" id="2Cn-BG-agT">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="62.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2t2-UP-YX9">
+                                            <rect key="frame" x="16" y="12" width="38" height="24"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <attributedString key="attributedText">
+                                                <fragment content="Title">
+                                                    <attributes>
+                                                        <font key="NSFont" metaFont="system" size="20"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="i8z-fw-0px">
+                                            <rect key="frame" x="16" y="36" width="44" height="14.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="zMY-dc-hEp" id="vfb-JF-lsX"/>
+                            <outlet property="delegate" destination="zMY-dc-hEp" id="HDY-mD-4Ka"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Title" id="d2J-dX-TrC"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sn6-GO-f6S" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2836" y="88"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="BLf-oJ-Mky">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RMb-BM-ac1" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zDy-HH-4EN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="zjO-aQ-R5U" kind="relationship" relationship="rootViewController" id="Waa-ja-id5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O1P-BS-EIq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="935.20000000000005" y="87.706146926536732"/>
         </scene>
     </scenes>
     <resources>
